tests/fixtures/errors/member_byteat_on_string.z
# String no longer silently inherits StringView's whole read surface: a
# StringView-only member (byteAt) on an owned String is a hard error. String
# declares the read methods it supports directly; reach the rest through an
# explicit `.stringview` view.
main: function is {
    s: "hi".string
    b: s.byteAt i: 0
    match ( b ) case some then { print "\{b}" } case none then null
}
